--- a/style.css
+++ b/style.css
@@ -1,13 +1,27 @@
 body{
     display: flex;
+    flex-direction: column;
+
 }
 .caja_filtro{
+    display: flex;
+    flex-direction: column;
     background-color: lightcyan;
     border: 1px solid black;
     border-radius: 5px;
     padding: 10px;
-    margin-bottom: 10px;
 }
-#input{
+
+.caja_formulario{
+    display: flex;
+    flex-direction: column;
+    background-color: beige;
+    border: 1px solid black;
     border-radius: 5px;
+    padding: 10px;
+    justify-content: space-around;
+}
+.inputs{
+    margin: 10px;
+    padding: 10px;
 }
